# parallel-3d-ground-segmentation

./: .gitignore  CMakeLists.txt  README.md
experiments/: experiment_1.cpp  experiment_2.cpp  experiment_3.cpp  experiment_4.cpp
performances/: performances.md
performances/plot_scripts/: plot_exp_1.py  plot_exp_2.py  plot_exp_3.py
scene_example/: 000056.label
src/: file_reader.cpp  file_reader.hpp  main.cpp  par_agorithm.hpp  par_algorithm.cpp  par_algorithm.hpp  seq_algorithm.cpp  seq_algorithm.hpp  visualizer.cpp  visualizer.hpp
